# easyjson

./: README.md  easyJSON.cabal  easyjson.cabal  stack.yaml
app/: Main.hs
src/Data/: EasyJSON.hs
test/Data/: EasyJSONSpec.hs
