name:                easyJSON
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/githubuser/easyJSON#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Testing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.EasyJSON
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , aeson
                     , scientific
                     , trifecta
                     , aeson
                     , unordered-containers
                     , bytestring
                     , vector
                     , text
                     , parsers
                     , transformers
  default-language:    Haskell2010

executable ckjson
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , easyJSON
                     , aeson-pretty
  default-language:    Haskell2010

test-suite easyJSON-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Data.EasyJSONSpec
  main-is:             Spec.hs
  build-depends:       base
                     , easyJSON
                     , hspec
                     , QuickCheck
                     , scientific
                     , trifecta
                     , aeson
                     , unordered-containers
                     , bytestring
                     , vector
                     , text
                     , ansi-wl-pprint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/easyJSON
